bütün binalar çizildi

--- a/tmldeneme.html
+++ b/tmldeneme.html
@@ -86,6 +86,17 @@
                     <button class="sub-section" data-section="yuksel-4">Geri Dönüşüm</button>
                 </div>
             </div>
+
+            <!-- Kimya Bölümü -->
+            <div class="building-section">
+                <button class="building-option" data-building="kimya">Kimya Bölümü</button>
+                <div class="sub-sections">
+                    <button class="sub-section" data-section="kimya-1">Erişilebilirlik</button>
+                    <button class="sub-section" data-section="kimya-2">Çalışma Salonları ve Bilgisayar Laboratuvarları</button>
+                    <button class="sub-section" data-section="kimya-3">Kantin ve Otomatlar</button>
+                    <button class="sub-section" data-section="kimya-4">Geri Dönüşüm</button>
+                </div>
+            </div>
         </div>
     </div>
 
